--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -132,6 +132,9 @@
 								case'/tipoItemManager/':
 									cargarFasesEnComboBox();
 									break;
+								case'/itemManager/':
+									cargarFasesEnComboBox();
+									break;
 								default:
 									alert('no te olvides agregar para que actualice el jqgrid en el if de base')
 							}
