Actualizado el sistema de conteo de numero de fases por proyectos. Usuarios inactivos ahora no pueden acceder al sistema. Arreglos menores.

--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -73,7 +73,7 @@
 	</div> 
 	<div id="barraFooter" style="clear:both;text-align:center; background-color: #0B3861;height: 70px;width:100%;
 	  position: fixed; bottom: 0 ;left:0;right:0">
-	Copyright © WAPM <br></br> Desarrollado por: PRASS    email: prass@software.prass.py
+	Copyright © WAPM <br></br> Desarrollado por: RALSS    email: prass@software.ralss.py
 	
 	</div>
 
