--- a/my/templates/proyectoManagerBackup.html
+++ b/my/templates/proyectoManagerBackup.html
@@ -630,9 +630,6 @@ function() {
 				autoOpen : false,
 				width : 'auto',
 				height : 'auto',
-				close: function() {
-					$('#list').trigger("reloadGrid");
-				   },
 				overflow : scroll,
 				modal : true,
 				show : {
@@ -712,7 +709,6 @@ function() {
 																"Exito",
 																data
 																		.substring(2));
-														
 													}
 													/* se indicar la recarga de la tabla */
 													$('#listaFases')
@@ -877,7 +873,7 @@ function() {
 									formatter : 'select',
 									stype : 'select',
 									editoptions : {
-										value : "desarrollo:Desarrollo;activo:Activo;finalizado:Finalizado"
+										value : "activo:Activo;finalizado:Finalizado"
 									},
 									hidden : false
 	
@@ -957,6 +953,9 @@ function() {
 															presupuesto : $(
 																	"#presupuesto")
 																	.val(),
+															nroFases : $(
+																	"#nroFases")
+																	.val(),
 															observacion : $(
 																	"#observacion")
 																	.val(),
@@ -1028,6 +1027,9 @@ function() {
 																	.val(),
 															presupuesto : $(
 																	"#presupuesto")
+																	.val(),
+															nroFases : $(
+																	"#nroFases")
 																	.val(),
 															activo : $(
 																	"#activo")
@@ -1500,18 +1502,8 @@ $('#dialogo-agregar-miembros')
 					</td>
 				</tr>
 				<tr>
-					<td><label for="observacion" style="display: block">Observacion</label>
-						<textarea type="text" name="observacion" id="observacion" value=""
-						style="width: 200px; display: block; margin-bottom: 12px; padding: 0.4em;" ></textarea>
-					</td>
-					<td><br></br> <input type="text" readonly tabIndex="-1"
-						name="Eobservacion" id="Eobservacion"
-						style="width: 200px; border: none; display: block; margin-bottom: 12px; padding: 0.4em;" />
-					</td>
-				</tr>
-				<tr>
-					<td><label id="lNroFases" for="nroFases"  style="display: block">
-					</label> <input type="text" name="nroFases" id="nroFases"
+					<td><label for="nroFases" style="display: block">Numero
+							de fases</label> <input type="text" name="nroFases" id="nroFases"
 						value=""
 						style="width: 200px; display: block; margin-bottom: 12px; padding: 0.4em;" />
 					</td>
@@ -1520,13 +1512,22 @@ $('#dialogo-agregar-miembros')
 						style="width: 200px; border: none; display: block; margin-bottom: 12px; padding: 0.4em;" />
 					</td>
 				</tr>
-				
 				<tr>
-					<td><label id="lEstado" for="estado" style="display: block"></label>
+					<td><label for="observacion" style="display: block">Observacion</label>
+						<input type="text" name="observacion" id="observacion" value=""
+						style="width: 200px; display: block; margin-bottom: 12px; padding: 0.4em;" />
+					</td>
+					<td><br></br> <input type="text" readonly tabIndex="-1"
+						name="Eobservacion" id="Eobservacion"
+						style="width: 200px; border: none; display: block; margin-bottom: 12px; padding: 0.4em;" />
+					</td>
+				</tr>
+				<tr>
+					<td><label for="estado" style="display: block">Estado</label>
 						<select id="estado"
 						style="width: 200px; display: block; margin-bottom: 12px; padding: 0.4em; width: 50%;">
-							<option value="desarrollo">Desarrollo</option>
 							<option value="activo">Activo</option>
+							<option value="finalizado">Finalizado</option>
 					</select></td>
 				</tr>
 			</table>
@@ -1541,33 +1542,28 @@ $('#dialogo-agregar-miembros')
 <script>
 
 function cargaComboUsuario(){
-	if (valorProyectoSeleccion()!=0){
-		$.post('/listarComboUsuario/',
-				{ /* se indican los parametros*/
-					idProyecto : valorProyectoSeleccion()
-				},
-				function(data, status) {
-					var select = $('#comboUsuario');
-					var options = select.prop('options');
-					
-					$('option', select).remove();
-					options[0] = new Option("--Seleccione un Usuario--","0");
-					var index=0
-					
-					data = $.parseJSON( data );
-					//var jsonData = JSON.stringify(eval("(" + data + ")"));
-					$.each(data, function(index,usuario) {
-						index=index+1;
-						options[options.length] = new Option(index+" : "+usuario.nombreUsuario,usuario.idUsuario);
-					})
-				}
-			);
-		$('#listRolUser').clearGridData(true);
-		$('#dialogo-rolUsuario').dialog("open");
-	}else{
-		mostrarMensaje("Atencion","Debe seleccionar un Proyecto")
-		
-	}
+	$.post('/listarComboUsuario/',
+			{ /* se indican los parametros*/
+				idProyecto : valorProyectoSeleccion()
+			},
+			function(data, status) {
+				var select = $('#comboUsuario');
+				var options = select.prop('options');
+				
+				$('option', select).remove();
+				options[0] = new Option("--Seleccione un Usuario--","0");
+				var index=0
+				
+				data = $.parseJSON( data );
+				//var jsonData = JSON.stringify(eval("(" + data + ")"));
+				$.each(data, function(index,usuario) {
+					index=index+1;
+					options[options.length] = new Option(index+" : "+usuario.nombreUsuario,usuario.idUsuario);
+				})
+			}
+		);
+	$('#listRolUser').clearGridData(true);
+	$('#dialogo-rolUsuario').dialog("open");
 	
 }
 
@@ -1827,33 +1823,29 @@ var banderaRol;
 	/*se carga el combo de Fases*/
 	function cargaComboFase(){
 		
-		if(valorProyectoSeleccion()!=0){
-			$.post('/listarComboFases/',
-					{ /* se indican los parametros*/
-						idProyecto : valorProyectoSeleccion()
-					},
-					function(data, status) {
-						var select = $('#comboFase');
-						var options = select.prop('options');
-						
-						$('option', select).remove();
-						options[0] = new Option("--Seleccione una Fase--","0");
-						var index=0
-						
-						data = $.parseJSON( data );
-						//var jsonData = JSON.stringify(eval("(" + data + ")"));
-						$.each(data, function(index,fase) {
-							index=index+1;
-							options[options.length] = new Option(index+" : "+fase.nombreFase,fase.idFase);
-						})
-					}
-				);
-			$('#listRoles').clearGridData(true);
-			$('#dialogo-roles').dialog("open");
-		}else{
-			mostrarMensaje("Atencion","Debe seleccionar un Proyecto");
-		}
-	}	
+		$.post('/listarComboFases/',
+				{ /* se indican los parametros*/
+					idProyecto : valorProyectoSeleccion()
+				},
+				function(data, status) {
+					var select = $('#comboFase');
+					var options = select.prop('options');
+					
+					$('option', select).remove();
+					options[0] = new Option("--Seleccione una Fase--","0");
+					var index=0
+					
+					data = $.parseJSON( data );
+					//var jsonData = JSON.stringify(eval("(" + data + ")"));
+					$.each(data, function(index,fase) {
+						index=index+1;
+						options[options.length] = new Option(index+" : "+fase.nombreFase,fase.idFase);
+					})
+				}
+			);
+		$('#listRoles').clearGridData(true);
+		$('#dialogo-roles').dialog("open");
+	}
 	
 	function comboFaseSeleccion()
 	{
@@ -2082,11 +2074,9 @@ var banderaRol;
 		$("#datepicker").val("").attr('disabled', false);
 		$("#datepicker2").val("").attr('disabled', false);
 		$("#presupuesto").val("").attr('disabled', false);
-		$("#lNroFases").text("");
-		$("#nroFases").val("0").hide().attr('disabled', false);
+		$("#nroFases").val("").attr('disabled', false);
 		$("#observacion").val("").attr('disabled', false);
-		$("#lEstado").text("");
-		$("#estado").val("").hide().attr('disabled', true);
+		$("#estado").val("").attr('disabled', true);
 		/* se llama al dialogo de captura de datos */
 		$("#dialogo-proyecto").dialog("open");
 	}
@@ -2118,12 +2108,10 @@ var banderaRol;
 		$("#datepicker2").val(rowdata.fechaFinalizacion)
 				.attr('disabled', false);
 		$("#presupuesto").val(rowdata.presupuesto).attr('disabled', false);
-		$("#nroFases").val(rowdata.nroFases).hide().attr('disabled', false);
-		//$("#lNroFases").text("some value");
-		$("#lNroFases").text("");
+		$("#nroFases").val(rowdata.nroFases).attr('disabled', false);
 		$("#observacion").val(rowdata.observacion).attr('disabled', false);
-		$("#estado").val(rowdata.estado).hide().attr('disabled', false);
-		$("#lEstado").text("");
+		$("#estado").val(rowdata.estado).attr('disabled', true);
+
 		/* se llama al dialogo para modificar los datos */
 		$("#dialogo-proyecto").dialog("open");
 	}
@@ -2151,85 +2139,11 @@ var banderaRol;
 		$("#datepicker").val(rowdata.fechaInicio).attr('disabled', true);
 		$("#datepicker2").val(rowdata.fechaFinalizacion).attr('disabled', true);
 		$("#presupuesto").val(rowdata.presupuesto).attr('disabled', true);
-		$("#lNroFases").text("Cantidad de fases");
-		$("#nroFases").val(rowdata.nroFases).show().attr('disabled', true);
+		$("#nroFases").val(rowdata.nroFases).attr('disabled', true);
 		$("#observacion").val(rowdata.observacion).attr('disabled', true);
-		$("#lEstado").text("Estado");
-		$("#estado").val(rowdata.estado).show().attr('disabled', true);
+		$("#estado").val(rowdata.estado).attr('disabled', true);
 		/* se llama al dialogo para modificar los datos */
 		$("#dialogo-proyecto").dialog("open");
-	}
-	
-	function activarProyecto(){
-		var rowProyecto = $('#list').jqGrid('getGridParam', 'selrow');
-		if (rowProyecto == null) {
-			mostrarMensaje("Error", "Debe seleccionar un proyecto para activarlo")
-		}else{
-			var rowdata = $('#list').getRowData(rowProyecto);
-			if(rowdata.estado!="desarrollo"){
-				mostrarMensaje("Error", "Este proyecto ya ha sido activado anteriormente")
-			}else{
-				/*
-					$.post('/activarProyecto/',{
-												
-												idProyecto: rowdata.idProyecto
-												},
-												function(data, status) {
-													if (data.substring(
-															0, 1) == 't') {
-														mostrarMensaje(
-																"Error",
-																"Los datos no se han podido guardar:\n"
-																		+ data
-																				.substring(2));
-												
-													} else {
-														$(
-																"#dialogo-rolProyecto")
-																.dialog(
-																		"close");
-														mostrarMensaje(
-																"Exito",
-																data
-																		.substring(2));
-													}
-												
-													$('#listRoles')
-															.trigger(
-																	"reloadGrid");
-												});
-	
-				*/
-				
-				
-				
-				
-			}
-			
-		}
-		
-	}
-	
-	function finalizarProyecto(){
-		var rowProyecto = $('#list').jqGrid('getGridParam', 'selrow');
-		if (rowProyecto == null) {
-			mostrarMensaje("Error", "Debe seleccionar un proyecto a finalizar")
-		}else{
-			var rowdata = $('#list').getRowData(rowProyecto);
-			
-			if(rowdata.estado!="activo"){
-				mostrarMensaje("Error", "El proyecto debe estar en estado activo para ser fiinalizado")
-			}else{
-				
-				
-				
-				
-				
-			}
-			
-		}
-		
-		
 	}
 
 	function setBordeNormal() {
@@ -2282,6 +2196,14 @@ var banderaRol;
 					'red');
 
 		}
+		len = $("#nroFases").val().trim().length;
+		if (len <= 0 || $("#nroFases").val().trim() == '0') {
+			$("#nroFases").css('border-color', 'red');
+			$("#EnroFases").val("Debe declarse al menos 1 fase").css('color',
+					'red');
+			error = 1;
+		}
+
 		len = document.getElementById("observacion").value.trim().length;
 		//len=$("#observacion").val().trim().length;
 		if (len > 50) {
@@ -2380,10 +2302,7 @@ var banderaRol;
 	<h2>Administracion de Proyectos</h2>
 	<table id="list"></table>
 	<div id="pager"></div>
-	<input id="btActivarPy" type="button" name="btActivarPy"
-		value="Activar Proyecto" onclick='activarProyecto()' style="float:right;" />
-		<input id="btFinalizarPy" type="button" name="btFinalizarPy"
-		value="Finalizar Proyecto" onclick='finalizarProyecto()' style="float:right;" />
+
 
 	<br></br> <input id="btAgregar" type="button" name="nuevo"
 		value="Nuevo" onclick='agregar()' /> <input id="btModificar"
@@ -2402,8 +2321,6 @@ var banderaRol;
 		id="btRolUser" type="button" name="btRolUser"
 		value="Asignar roles a Usuario" onclick='cargaComboUsuario()' /> <br></br>
 	<script>
-		$("#btFinalizarPy").button();
-		$("#btActivarPy").button();
 		$("#btAgregar").button();
 		$("#btModificar").button();
 		$("#btConsultar").button();
